--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "bootstrap": "^5.2.0-beta1",
     "core-js": "^3.8.3",
+    "vant": "^3.5.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
@@ -23,6 +26,8 @@
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-vue": "^8.0.3",
-    "eslint-plugin-vuejs-accessibility": "^1.1.0"
+    "eslint-plugin-vuejs-accessibility": "^1.1.0",
+    "prettier": "^2.6.2",
+    "prettier-eslint": "^15.0.1"
   }
 }
